[package]
name = "ddccid"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
daemonize = "0"
ddc-hi = { version = "0", optional = true }
ddcutil = { git = "https://github.com/Xerxes-2/ddcutil-rs.git", optional = true }
itertools = "0"
serde_json = "1"

[features]
ddcutil = ["dep:ddcutil"]
ddc-hi = ["dep:ddc-hi"]
default = ["ddc-hi"]
